content/en/docs/2022.9/Reference/Glossary/a-e.md
---
title: "A-E"
linkTitle: "A-E"
description: "Terms, words and phrases beginning with the letters A through E."
weight: 10
---

# {{% param title %}}

Terms, words and phrases beginning with the letters A through E.

## A

### Acceleration Program

See [Acceleration Program][].

### API

An API (Application Programming Interface) is a set of functions that allows applications to access data from and interact with external systems, services or applications.

### Autogeneration

Autogeneration, is the process in which something is created automatically for use within a process.

### Automate

The application of [automation][].

### Automation

Automation is a term for techniques, methods, systems or technologies that reduce human intervention in [tasks][] and [processes][].

### AWS Lambda

AWS Lambda is an event driven serverless solution from AWS. Instead of deploying and maintaining servers, cloud infrastructure is used to run applications.

### Azure Functions

Azure Functions is an event driven serverless solution from Microsoft. Instead of deploying and maintaining servers, cloud infrastructure is used to run applications.

## B

### BCC

Blind Carbon Copy (BCC) is a way of sending copies of an email to other people. Unlike [CC][] recipients, the other recipients of the email will not be able to see who recieved the email via BCC.

### Bit

A bit is the most basic unit of information in computing, and represents a logical state with one of two possible values; most commonly represented as 1 or 0.

See [Wikipedia][Bit (Wikipedia)] for more information.

### Block

Blocks (or [functional blocks][]) expose the logic and actions that the [{{% ctx %}}][CORTEX] [platform][] is able to execute for the [flow developers][]; alongside [flows][Flow] they are one of the main components used to define how to automate [tasks][] and [processes][].

For more detailed information about blocks, see [Fundamentals > Blocks][].

For a complete list of available blocks, see [Reference > Blocks][].

### Block Property

[Blocks][Block] have block properties (or [properties][]) that allow the [flow developers][] to configure how the block should behave; e.g. a block to send emails would have properties for specifying things like the sender, recipients, summary, body, attachments etc.

For more detailed information about configuring blocks using block properties, see [Fundamentals > Block Properties][].

### Boolean

A [data type][] that represents a logical value of `true` or `false`.

For more detailed information about the Boolean data type, see [Data Types > Boolean][].

### Byte

A byte is a unit of information in computing that most commonly consists of eight [bits][Bit].

See [Wikipedia][Byte (Wikipedia)] for more information.

## C

### C\#

C# (pronounced "see sharp") is a [programming language][] developed by Microsoft.

It is natively supported by the [{{% ctx %}}][CORTEX] [platform][] for using simple [expressions][Expression] (i.e. `1 + 1`) and more complex [code][] (i.e. `DateTime.Now.AddDays(1)`) within [flows][Flow].

C# expressions and code can be entered as the values for [Fundamentals > Block Properties][Block Property] using the [Expression Editor][].

See the official [C# documentation][] for more information about C#.

### camelCase

camelCase is a typographical convention in which phrases are written without spaces or punctuation, indicating the separation of words with a single capitalized letter, and the first word starting with a lowercase letter. E.g. "iPhone" and "eBay".

camelCase is often used as a naming convention in programming languages such as [C#][].

See also [PascalCase][].

### Case-insensitive

If something is case-insensitive, it means it ignores differences in case (i.e. `CASE` is considered equal to `case`).

### Case-sensitive

If something is case-sensitive, it means it considers differences in case (i.e. `CASE` is considered not equal to `case`).

### Cast

The process of explicitly converting one [data type][] to another.

See [Casting and type conversions (C# Programming Guide)][] for a detailed technical explanation of casting in [C#][], the [programming language][] natively supported by the [{{% ctx %}}][CORTEX] [platform][] for writing simple [expressions][Expression] and more complex [code][].

Also see [Explicit Cast][] for more information.

### CC

Carbon Copy (CC) is a way of sending copies of an email to other people. The other recipients of the email will be able to see who recieved the email via CC.

### CI/CD

CI/CD is a software development practice and is broken down into the following concepts:

- [Continuous Integration][]
- [Continuous Delivery][]
- [Continuous Deployment][]

### Char

A [data type][] that represents a character or letter.

For more detailed information about the Char data type, see [Data Types > Char][].

### Cloud

A global network of servers which are linked together and operate as a single ecosystem.

Examples of publicly available Cloud providers include:

* Amazon AWS
* Google Cloud Platform
* Microsoft Azure

### Cloud Service Provider

A cloud service provider is a third-party company offering a cloud-based platform, infrastructure, application, or storage services.

### Code

A set of instructions in a computer program.

### Concurrent

At the same time.

### Continuous Integration

Continuous Integration is a software development practice where developers frequently:

- Integrate their local changes with source code from the main branch
- Use automated testing to ensure that their changes work as expected
- Merge their changes into the main branch, if no issues were found

### Continuous Delivery

Continuous Delivery is a software development practice where:

- Changes to the main branch are detected
- The main branch is packaged into deployment artefacts
- Deployment artefacts are made available

### Continuous Deployment

Continuous Deployment is a software development practice which extends [Continuous Delivery][] by automatically deploying the generated artefacts.

### Convert

To change something into a different form. E.g. Change some [text][] from [lowercase][] to [UPPERCASE][].

### {{% ctx %}}

The name of the new and current generation of the {{% ctx %}} [automation][] [platform][].

### {{% ctx %}} Gateway

The centralised web-based [portal][] for accessing all user applications and tooling in the [{{% ctx %}}][CORTEX] [platform][].

### {{% ctx %}} Studio

The web-based integrated development environment ([IDE][]) for creating, editing, [debugging][], testing and managing [flows][Flow] that define the logic and actions required to capture and automate a [task][tasks] or [process][Processes].

For more detailed information about {{% ctx %}} Studio, see [Guides > {{% ctx %}} Studio][Guides > CORTEX Studio].

### Culture

Describes a set of rules for data that differs between different cultures; it determines the default format for dates, times, numbers, currency values, the sorting order of text, casing conventions, and text comparisons.

For more detailed information about Culture, see [Working With > Culture][].

### Culture identifier

A culture identifier is a standard international numeric abbreviation and has the components necessary to uniquely identify one of the operating system's installed cultures.

For more detailed information about Culture, see [Working With > Culture][].

### Culture-insensitive

If something is culture-insensitive, it means that it does not get affected by culture related changes to the operating system, such as language and regional settings.

### Culture-sensitive

If something is culture-sensitive, it means that it does get affected by culture related changes to the operating system, such as language and regional settings.

### Current Culture

The current culture used by the executing thread; it determines the default format for dates, times, numbers, currency values, the sorting order of text, casing conventions, and string comparisons.

For more detailed information about Culture, see [Working With > Current Culture][].

### CRL

Certificate Revocation List (CRL) is a list of certificates that have been revoked by the issuing certificate authority prior to their actual/assigned expiration date. It is essentially a list of certificates that should no longer be trusted.

## D

### Data Type

A data type (or [type][]) defines the type of data or values that a [block property][] can accept.

For more detailed information about data types, see [Fundamentals > Data Types][].

For a complete list of available data types, see [Reference > Data Types][].

### Debug

The ability for [flow developers][] to execute and interact with a [flow][] step-by-step from within [{{% ctx %}} Studio][CORTEX Studio], so that they are able to identify and remove [errors][] in the [flow's][flow] logic and actions.

For more detailed information about debugging in {{% ctx %}} Studio, see [{{% ctx %}} Studio > Debugging][CORTEX Studio > Debugging].

### Default Value

The default that is assigned as the value of a [block property][] when a new [block][] is added to a [flow][].

### Design Sprint

See [Design Sprint][]

### Developer

A developer is an individual that builds and creates software and applications.

### Dictionary

A [data type][] that represents an unordered collection of key-item pairs, where each pair consists of a unique key and its associated item. Dictionaries are optimised for fast lookup of items using their key.

For more detailed information about the Dictionary data type, see [Data Types > Dictionary&lt;TKey, TItem&gt;][].

### DLL

DLL files are binary files that can contain executable code and resources.

### Drag-and-Drop

Functionality that allows a user to select an object and move it to another location.

### Double

A [data type][] that represents a fractional, or very large or small number from `-1.79769313486232e+308` through `1.79769313486232e+308`.

For more detailed information about the Double data type, see [Data Types > Double][].

### dynamic

A [data type][] that indicates that any data type can be used.

For more detailed information about the dynamic data type, see [Data Types > dynamic][].

## E

### Empty

Empty indicates that a [data type][] has been [initialised][] and has a [non-null][] value, but the value does not contain any data. E.g. a [string][] that contains no characters `""`, or a [list][] that contains no items `[]`.

Empty is not the same as [null][].

### Error

Something which is inaccurate or incorrect; a mistake.

### Example

An example is intended to show [flow developers][] how something works. Examples can be found near the top of every [block's][block] help page. See [examples][] for the [Add Text At Beginning][] block.

### Exception

An exception represents [errors][] that occur during the [execution][] of a [flow][].

Exceptions are [data types][Data Type] that can be reasoned with during the execution of a flow, in order to handle errors during the [automation][] of a [task][tasks] or [process][Processes].

For more detailed information about exceptions, see [Fundamentals > Exceptions][].

For a complete list of available [blocks][block] that can be used to handle exceptions, see [Blocks > Exception Blocks][].

For a complete list of exceptions, see [Reference > Exceptions][].

### Execution

When a [request][] to start a [flow][] is received by the [{{% ctx %}}][CORTEX] [platform][], an execution is created that represents that instance of the executing flow.

There can be multiple executions of a flow running [concurrently][concurrent].

For more detailed information about executions, see [{{% ctx %}} Studio > Debugging][CORTEX Studio > Debugging].

### Explicit Cast

Sometimes, in order to convert one [data type][] to another, an "explicit cast" [expression][] is required; this is typically needed when information might be lost in the conversion, or when the conversion might not succeed for other reasons.

An example would be converting a [32-bit][] [integer][] ([Int32][]) to a [16-bit][] [integer][] ([Int16][]):

```csharp
Int32 ThirtyTwoBitInteger = 100;
Int16 SixteenBitInteger = (Int16)ThirtyTwoBitInteger;
```

See [Cast expression (C# Reference)][] for a detailed technical explanation.

Also see [Cast][] for more information.

### Expression

An expression is a combination of [operands][] (i.e. [variables][], [literals][], calls to [methods][] and [properties][PropertiesC#] exposed on [data types][Data Type]) and [operators][] (i.e. =, +, -, *, /) that can be evaluated by the [{{% ctx %}}][CORTEX] [platform][] to a single value.

Expressions use the syntax of the [C#][] [programming language][].

For more detailed information about expressions, see [Fundamentals > Expressions][].

### Expression Editor

The Expression Editor is a web-based text editor that allows [flow developers][] to use either simple [expression][] or more complex [code][] as the value of a [block property][].

It is based on the [Monaco Editor][] used by [VS Code][], and includes a rich set of features including:

* [Syntax Highlighting][]
* [Snippets][]
* [Intellisense][]

For more detailed information about the Expression Editor, see [{{% ctx %}} Studio > Expression Editor][CORTEX Studio > Expression Editor].

[Automate]: {{< ref "#automate" >}}
[Automation]: {{< ref "#automation" >}}
[Bit]: {{< ref "#bit" >}}
[Block]: {{< ref "#block" >}}
[Block Property]: {{< ref "#block-property" >}}
[C#]: {{< ref "#c-1" >}}
[Cast]: {{< ref "#cast" >}}
[CC]: {{< ref "#cc" >}}
[Code]: {{< ref "#code" >}}
[Concurrent]: {{< ref "#concurrent" >}}
[Continuous Integration]: {{< ref "#continuous-integration" >}}
[Continuous Delivery]: {{< ref "#continuous-delivery" >}}
[Continuous Deployment]: {{< ref "#continuous-deployment" >}}
[CORTEX]: {{< ref "#cortex" >}}
[CORTEX Studio]: {{< ref "#cortex-studio" >}}
[Data Type]: {{< ref "#data-type" >}}
[Debugging]: {{< ref "#debug" >}}
[Errors]: {{< ref "#error" >}}
[Execution]: {{< ref "#execution" >}}
[Explicit Cast]: {{< ref "#explicit-cast" >}}
[Expression]: {{< ref "#expression" >}}
[Expression Editor]: {{< ref "#expression-editor" >}}

[Fundamentals > Blocks]: {{< url path="Cortex.Reference.Concepts.Fundamentals.Blocks.MainDoc" >}}
[Fundamentals > Block Properties]: {{< url path="Cortex.Reference.Concepts.Fundamentals.Blocks.BlockProperties.MainDoc" >}}
[Fundamentals > Data Types]: {{< url path="Cortex.Reference.Concepts.Fundamentals.DataTypes.MainDoc" >}}

[Working With > Culture]: {{< url path="Cortex.Reference.Concepts.WorkingWith.Culture.MainDoc" >}}
[Working With > Current Culture]: {{< url path="Cortex.Reference.Concepts.WorkingWith.Culture.CurrentCulture.MainDoc" >}}

[Reference > Blocks]: {{< url path="Cortex.Reference.Blocks.MainDoc" >}}
[Blocks > Exception Blocks]: {{< url path="Cortex.Reference.Blocks.Exceptions.MainDoc" >}}
[Add Text At Beginning]: {{< url path="Cortex.Reference.Blocks.Text.AddText.AddTextAtBeginning.MainDoc" >}}

[Examples]: {{< url path="Cortex.Reference.Blocks.Text.AddText.AddTextAtBeginning.Examples" >}}

[Reference > Data Types]: {{< url path="Cortex.Reference.DataTypes.MainDoc" >}}
[Data Types > Boolean]: {{< url path="Cortex.Reference.DataTypes.ConditionalLogic.Boolean.MainDoc" >}}
[Data Types > Char]: {{< url path="Cortex.Reference.DataTypes.Text.Char.MainDoc" >}}
[Data Types > Double]: {{< url path="Cortex.Reference.DataTypes.Numbers.Double.MainDoc" >}}
[Data Types > dynamic]: {{< url path="Cortex.Reference.DataTypes.All.dynamic.MainDoc" >}}
[Data Types > Dictionary&lt;TKey, TItem&gt;]: {{< url path="Cortex.Reference.DataTypes.Collections.Dictionary.MainDoc" >}}
[Fundamentals > Exceptions]: {{< url path="Cortex.Reference.Exceptions.MainDoc" >}}

[Reference > Exceptions]: {{< url path="Cortex.Reference.Exceptions.MainDoc" >}}

[Flow]: {{< url path="Cortex.Reference.Glossary.F-J.Flow" >}}
[flow developers]: {{< url path="Cortex.Reference.Glossary.F-J.FlowDeveloper" >}}
[Functional Blocks]: {{< url path="Cortex.Reference.Glossary.F-J.FunctionalBlock" >}}
[Initialised]: {{< url path="Cortex.Reference.Glossary.F-J.Initialised" >}}
[Integer]: {{< url path="Cortex.Reference.Glossary.F-J.Integer" >}}
[Int16]: {{< url path="Cortex.Reference.Glossary.F-J.Int16" >}}
[Int32]: {{< url path="Cortex.Reference.Glossary.F-J.Int32" >}}
[Intellisense]: {{< url path="Cortex.Reference.Glossary.F-J.Intellisense" >}}
[IDE]: {{< url path="Cortex.Reference.Glossary.F-J.IDE" >}}
[Literals]: {{< url path="Cortex.Reference.Glossary.K-O.Literal" >}}
[LowerCase]: {{< url path="Cortex.Reference.Glossary.K-O.LowerCase" >}}
[Methods]: {{< url path="Cortex.Reference.Glossary.K-O.Method" >}}
[Non-Null]: {{< url path="Cortex.Reference.Glossary.K-O.NonNull" >}}
[Null]: {{< url path="Cortex.Reference.Glossary.K-O.Null" >}}
[Operands]: {{< url path="Cortex.Reference.Glossary.K-O.Operand" >}}
[Operators]: {{< url path="Cortex.Reference.Glossary.K-O.Operator" >}}
[PascalCase]: {{< url path="Cortex.Reference.Glossary.P-T.PascalCase" >}}
[Platform]: {{< url path="Cortex.Reference.Glossary.P-T.Platform" >}}
[Portal]: {{< url path="Cortex.Reference.Glossary.P-T.Portal" >}}
[Processes]: {{< url path="Cortex.Reference.Glossary.P-T.Process" >}}
[Programming Language]: {{< url path="Cortex.Reference.Glossary.P-T.ProgrammingLanguage" >}}
[Properties]: {{< url path="Cortex.Reference.Glossary.P-T.PropertyBlock" >}}
[PropertiesC#]: {{< url path="Cortex.Reference.Glossary.P-T.PropertyCSharp" >}}
[Request]: {{< url path="Cortex.Reference.Glossary.P-T.Request" >}}
[Snippets]: {{< url path="Cortex.Reference.Glossary.P-T.Snippets" >}}
[Syntax Highlighting]: {{< url path="Cortex.Reference.Glossary.P-T.SyntaxHighlighting" >}}
[tasks]: {{< url path="Cortex.Reference.Glossary.P-T.Task" >}}
[Text]: {{< url path="Cortex.Reference.Glossary.P-T.Text" >}}
[Type]: {{< url path="Cortex.Reference.Glossary.P-T.Type" >}}
[UpperCase]: {{< url path="Cortex.Reference.Glossary.U-Z.UpperCase" >}}
[Variables]: {{< url path="Cortex.Reference.Glossary.U-Z.Variable" >}}
[16-bit]: {{< url path="Cortex.Reference.Glossary.0-9.16Bit" >}}
[32-bit]: {{< url path="Cortex.Reference.Glossary.0-9.32Bit" >}}
[data type]: {{< url path="Cortex.Reference.Glossary.A-E.DataType" >}}

[Guides > CORTEX Studio]: {{< url path="Cortex.Guides.Studio.MainDoc" >}}
[CORTEX Studio > Debugging]: {{< url path="Cortex.Guides.Studio.Debugging.MainDoc" >}}
[CORTEX Studio > Expression Editor]: {{< url path="Cortex.Guides.Studio.ExpressionEditor.MainDoc" >}}

[Fundamentals > Expressions]: {{< url path="Cortex.Reference.Concepts.Fundamentals.Blocks.BlockProperties.PropertyEditors.ExpressionEditor.Expressions" >}}

[Acceleration Program]: {{< url path="Cortex.Website.EngageWithUs.AccelerationProgram" >}}
[Design Sprint]: {{< url path="Cortex.Website.EngageWithUs.DesignSprint" >}}

[Casting and type conversions (C# Programming Guide)]: {{< url path="MSDocs.CSharp.Casting" >}}
[Cast expression (C# Reference)]: {{< url path="MSDocs.CSharp.CastExpression" >}}
[C# documentation]: {{< url path="MSDocs.CSharp.MainDoc" >}}
[List]: {{< url path="MSDocs.DotNet.Api.System.Collections.Generic.List" >}}
[String]: {{< url path="MSDocs.DotNet.Api.System.String.MainDoc" >}}

[Monaco Editor]: {{< url path="MSGitHub.MonacoEditor.MainDoc" >}}

[VS Code]: {{< url path="VisualStudio.Code.MainDoc" >}}

[Bit (Wikipedia)]: {{< url path="Wikipedia.Bit" >}}
[Byte (Wikipedia)]: {{< url path="Wikipedia.Byte" >}}
